<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CreateEventActivity"

    tools:showIn="@layout/activity_create_event">

    <TextView
        android:id="@+id/NewEventTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_title"
        android:textSize="10pt">
    </TextView>

    <EditText
        android:id="@+id/EditEventTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/nomnom"
        android:inputType="text" >
    </EditText>

    <TextView
        android:id="@+id/NewEventWhere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_where"
        android:textSize="10pt">
    </TextView>

    <EditText
        android:id="@+id/EditEventWhere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/where_it_at"
        android:inputType="text" >
    </EditText>

    <TextView
        android:id="@+id/NewEventDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_description"
        android:textSize="10pt">
    </TextView>

    <EditText
        android:id="@+id/EditEventDescription"
        android:layout_height="wrap_content"
        android:hint="@string/nomnom"
        android:inputType="text"
        android:layout_width="wrap_content">
    </EditText>

    <Button
        android:id="@+id/ButtonCreateEvent"
        android:layout_height="wrap_content"
        android:text="@string/create_event"
        android:onClick="createEvent"
        android:layout_width="wrap_content">
    </Button>


</LinearLayout>
