<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.theb0ardside.up4stuff.HomeActivity"
    tools:showIn="@layout/activity_home"
    android:orientation="vertical">


    <TextView
        android:id="@+id/homeStartUpTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/home_message"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/view_events"
        android:onClick="launchViewEvents" />


    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/create_event"
        android:onClick="launchCreateEvent" />

</LinearLayout>
